# RecomEase

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: evaluation.doctree  index.doctree
.doctrees/api/models/: base_model.doctree  index.doctree
.github/action/: install_dependencies.yml
.github/workflows/: build.yml
_modules/: index.html
_modules/recomease/models/: base_model.html
_sources/: index.rst.txt
_sources/api/models/: index.rst.txt
api/: evaluation.html  index.html
api/models/: base_model.html  index.html
doc/source/: conf.py  index.rst
docs/source/: conf.py  index.rst
docs/source/api/: evaluation.rst  index.rst
docs/source/api/models/: base_model.rst
src/recomease/models/: base_model.py
