[project]
name = "recomease"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lorenzo Gardini", email = "l.gardo98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.8.0",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
